Changed from Base64 (that was added on Java8) to use DatatypeConverter that is available since Java 6.